Adds points within and limit routes
