# fakegeo-web/swagger-output.json
@@ -29,6 +29,10 @@
     {
       "name": "Polygon feature",
       "description": "Operations related to geographical polygon features"
+    },
+    {
+      "name": "Points",
+      "description": "Operations related to geographical points"
     }
   ],
   "paths": {
@@ -2371,8 +2375,8 @@
         "tags": [
           "Points"
         ],
-        "summary": "Returns a limited number of geographical points",
-        "description": "Accepts a limit and returns that many points from a collection of geographical points. Limit must be less than or equal to 1000.",
+        "summary": "Returns a limited number of geographical points within a bounding box or GeoJSON polygon",
+        "description": "Accepts a limit and optionally a GeoJSON Polygon or bounding box (bbox) to filter a collection of geographical points. The limit must be less than or equal to 1000.",
         "requestBody": {
           "required": true,
           "content": {
@@ -2384,6 +2388,50 @@
                     "type": "integer",
                     "description": "Number of points to return (must be <= 1000)",
                     "example": 30
+                  },
+                  "geojsonPolygon": {
+                    "type": "object",
+                    "description": "GeoJSON Polygon to filter points within",
+                    "example": {
+                      "type": "Polygon",
+                      "coordinates": [
+                        [
+                          [
+                            -104.83004979248041,
+                            39.06523015276548
+                          ],
+                          [
+                            -102.45708546876439,
+                            31.328195547453603
+                          ],
+                          [
+                            -86.94737395052326,
+                            31.832777392621864
+                          ],
+                          [
+                            -84.34442721393819,
+                            42.32251654152694
+                          ],
+                          [
+                            -104.83004979248041,
+                            39.06523015276548
+                          ]
+                        ]
+                      ]
+                    }
+                  },
+                  "bbox": {
+                    "type": "array",
+                    "description": "Bounding box in the format [minX, minY, maxX, maxY] to filter points within",
+                    "items": {
+                      "type": "number"
+                    },
+                    "example": [
+                      -104.83004979248041,
+                      31.328195547453603,
+                      -84.34442721393819,
+                      43.89485607270808
+                    ]
                   }
                 }
               }
@@ -2439,7 +2487,7 @@
             }
           },
           "400": {
-            "description": "Bad request - Invalid limit value",
+            "description": "Bad request - Invalid limit value, GeoJSON Polygon, or BBox",
             "content": {
               "application/json": {
                 "schema": {
@@ -2447,7 +2495,7 @@
                   "properties": {
                     "message": {
                       "type": "string",
-                      "example": "Invalid input. Provide a valid limit number."
+                      "example": "Invalid input. Provide a valid limit number, GeoJSON Polygon, or bbox."
                     }
                   }
                 }
@@ -2463,7 +2511,7 @@
                   "properties": {
                     "message": {
                       "type": "string",
-                      "example": "Error processing input <error_message>"
+                      "example": "Error processing input. An internal error occurred"
                     }
                   }
                 }
